<resources>
    <string name="app_name">Trip Angel</string>
    <string name="contentdescription_lookup_schedule">Lookup Schedule</string>
    <string name="contentdescription_on_going_trip">On Going Trip information</string>
    <string name="schedule">Get me somewhere</string>
    <string name="recents">Recents</string>
    <string name="home_title">TransitAngel</string>
    <string name="search_from_title">From station list(%1$s)</string>
    <string name="search_to_title">To station list(%1$s)</string>
    <string name="search_title">Search train schedules</string>
    <string name="contentdescription_from_to">Search item from %1$s To %2$s</string>
    <string name="label_caltrain">CalTrain</string>
    <string name="trip_from_to">Trip from %1$s to %2$s</string>
    <string name="trip_train_number">Train #%1$s at %2$s</string>
    <string name="trip_train_without_number">Train at %1$s</string>
    <string name="contentdescription_recent_trip">Recent Trip from %1$s to %2$s, train number %3$s
        scheduled at %4$s
    </string>
    <string name="header_recent_trip">Recent Trip</string>
    <string name="header_recent_search">Recent Search</string>
    <string name="nearby_train">Towards %1$s</string>
    <string name="nearby_train_description">From %1$s towards %2$s</string>
    <string name="nearby_scheduled_at">Scheduled at %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CD_switch_button">Switch from and to station</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="Notification.Text">We\'re at %1$s!!!</string>
    <string name="Notification.Title">Train Stop Arrived</string>
    <string name="cancel_trip_notification">Cancel Trip</string>
    <string name="set">SET</string>
    <string name="empty_results">No trains available!</string>
    <string name="title_activity_schedule2">Schedule2Activity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="nearby_caltrain_title_default">Nearby Caltrain Stations</string>
    <string name="nearby_caltrain_title">Nearest Caltrain Station&#160;:&#160;</string>
    <string name="nearby_bart_title_default">Nearbyt Bart Stations</string>
    <string name="nearby_bart_title">Nearest Bart Stations&#160;:&#160;</string>
    <string name="recent_search_to">&#160;to&#160;</string>
    <string name="nearby_error_text">Error while getting nearby train information.</string>
    <string name="content_description_from_icon">From station icon</string>
    <string name="content_description_during_icon">During trip icon</string>
    <string name="content_description_to_icon">To station icon</string>
    <string name="live_trip_cancel_trip_button">CANCEL TRIP</string>
    <string name="no_live_trip">No live trip right now</string>
    <string name="tap_to_add_notifications">. Tap to add notification.</string>
    <string name="notification_selected">. Notification selected.</string>
    <string name="content_description_station">"Station , arriving at "</string>
    <string name="recent_trips">Recent Trip</string>
    <string name="recent_search">Recent Search</string>
    <string name="content_description_recent_search_header">Recent Search Section</string>
    <string name="content_description_recent_trip_header">Recent Trip Section</string>
    <string name="content_description_notification_checkbox">Notifications</string>
    <string name="tab_neaby_header">Near by</string>
    <string name="tab_header_live_trip">Live Trip</string>
    <string name="tab_header_recents_header">Recents</string>
    <string name="neaby_selected">Near by selected</string>
    <string name="neaby_unselected">Near by unselected</string>
    <string name="recents_unselected">Recents unselected</string>
    <string name="recents_selected">Recents selected</string>
    <string name="live_trip_unselected">Live trip unselected</string>
    <string name="live_trip_selected">Live trip selected</string>
    <string name="content_description_selected">selected</string>
    <string name="content_description_unselected">unselected</string>
    <string name="search_station_name">Search Station Name</string>
    <string name="search_menu_title">Search</string>
    <string name="home_screen_label">Trip Angel Home Screen</string>
    <string name="search_screen_label">Search Screen</string>
    <string name="schedule_screen_label">Schedule Screen</string>
    <string name="trip_details_screen_label">Trip Details Screen</string>
    <string name="ongoing_label">Ongoing Trip Screen</string>
    <string name="no_caltrain">No Caltrains at this moment.</string>
    <string name="no_bart">No Barts at this moment.</string>
    <string name="from_station">From Station</string>
    <string name="to_station">To Station</string>
    <string name="select_from_station">Select From station</string>
    <string name="select_to_station">Select to station</string>
    <string name="from_station_set">From station set to&#160;</string>
    <string name="to_station_set">To station set to&#160;</string>
    <string name="no_to_station_set">No to station set</string>
    <string name="no_from_station_set">No from station set</string>
    <string name="schedule_caltrain">Schedule:&#160;Caltrain</string>
    <string name="schedule_bart">Schedule:&#160;Bart</string>
    <string name="schedule_title">Schedule:</string>
    <string name="change_service">Change %1$s service</string>
    <string name="trip_started">Trip Started</string>
    <string name="search">Search stations</string>
    <string name="search_station_name_hint">Search Station Name</string>
    <string name="content_description_train_number">"Train number "</string>
    <string name="show_all_trips">show all trips</string>
    <string name="no_recent_trips_or_searches">No Recent trips or searches</string>
    <string name="transition_schedule">transition_schedule</string>
    <string name="transition_details">transition_details</string>
    <string name="train_details_title">Train#</string>
    <string name="title_all_trips">All Trips</string>
</resources>